--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "embark-mythx",
   "description": "Status Embark plugin for MythX",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "author": "eric.mastro@gmail.com",
   "contributors": [
+    "eric.mastro@gmail.com",
     "sebastian@flexdapps.com"
   ],
   "repository": {
